hide pages in element tree to prevent vertical scrollbar
git-svn-id: https://server.mycore.de/svn/mycore/trunk@26143 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/mycore-iview2/src/main/resources/components/iview2/web/modules/iview2/gfx/default/style.css
+++ b/mycore-iview2/src/main/resources/components/iview2/web/modules/iview2/gfx/default/style.css
@@ -664,3 +664,7 @@ div.thumbnail>img {
 .viewerContainer.min>thumbnailOverview {
 	overflow: hidden;
 }
+
+#pages.hidden {
+	display: none;
+}
